--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -18,7 +18,7 @@
       <a href="{{ url_for('match_detail', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">{{ c.label_best_language(languages) }}</a>
       <a href="https://www.openstreetmap.org/{{ c.osm_type }}/{{ c.osm_id }}">(OSM)</a>
     {% if c.dist and c.dist > 1 %}
-     {{ '{:,d}'.format(c.dist | int) }} m from Wikidata
+     {{ c.display_distance() }} from Wikidata
     {% else %}
       <span class="badge badge-success">exact location</span>
     {% endif %}
