--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -151,8 +151,8 @@
           {{c.osm_type}}:
           <a href="{{ url_for('match_detail', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">{{ c.label }}</a>
           <a href="https://www.openstreetmap.org/{{ c.osm_type }}/{{ c.osm_id }}">(OSM)</a>
-          {% if c.dist -%},
-             {{ c.dist | int }} m from Wikidata
+          {%- if c.dist -%},
+             {{ c.display_distance() }} from Wikidata
           {%- else -%}
               <span class="badge badge-success">exact location match</span>
           {% endif %}
