--- a/matcher/templates/user/settings.html
+++ b/matcher/templates/user/settings.html
@@ -36,16 +36,21 @@
     <small class="form-text text-muted">{{ form.multi.description }}</small>
   </div>
 
-  <h4>{{ ucfirst(form.units.label.text) }}</h4>
+  <h4>Display preferences</h4>
 
   <div class="form-group">
-    {% for option in form.units %}
-    <div class="form-check">
-      {{ option() }}
-      {{ option.label }}
-    </div>
-    {% endfor %}
+    {{ form.units.label }}
+    {{ form.units(class="form-control") }}
   </div>
+
+  {#
+  <h4>Editing</h4>
+
+  <div class="form-group">
+    {{ form.wikipedia_tag.label }}
+    {{ form.wikipedia_tag(class="form-control") }}
+  </div>
+  #}
 
   <button type="submit" class="btn btn-primary">Submit</button>
   </form>
