Bug fix single item match page.

--- a/matcher/templates/single_item_match.html
+++ b/matcher/templates/single_item_match.html
@@ -29,7 +29,7 @@
   <pre>{{ item.names() | pprint }}</pre>
 
   <h4>extracts</h4>
-  {% for site, extract in item.extracts %}
+  {% for site, extract in item.extracts.items() %}
     <h6>{{ site }}</h6>
     <p>{{ item.extracts }}</p>
   {% endfor %}
