Show individual extract instead of extracts dict.

--- a/matcher/templates/single_item_match.html
+++ b/matcher/templates/single_item_match.html
@@ -31,7 +31,7 @@
   <h4>extracts</h4>
   {% for site, extract in item.extracts.items() %}
     <h6>{{ site }}</h6>
-    <p>{{ item.extracts }}</p>
+    <p>{{ extract }}</p>
   {% endfor %}
 
   {% if candidates %}
