--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -54,7 +54,7 @@
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('social.auth', backend='openstreetmap', next=request.script_root + request.full_path) }}">login with OSM</a>
+            <a class="nav-link" href="{{ url_for('login_route', next=request.script_root + request.full_path) }}">login with OSM</a>
           </li>
         {% endif %}
     </ul>
