--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -54,7 +54,10 @@
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login_route', next=request.script_root + request.full_path) }}">login with OSM</a>
+            {% set login_url = url_for('login_route', next=request.script_root + request.full_path)
+                               if request.endpoint != 'social.complete'
+                               else url_for('login_route') %}
+            <a class="nav-link" href="{{ login_url }}">login with OSM</a>
           </li>
         {% endif %}
     </ul>
