Show date added on space admin page.

--- a/matcher/templates/db_space.html
+++ b/matcher/templates/db_space.html
@@ -24,7 +24,12 @@
             {{ place.size | filesizeformat }}
         {% endif %}
         </td>
-        <td><a href="{{ place.candidates_url }}">{{ place.display_name.replace(';', '; ') }}</a></td>
+        <td>
+          <a href="{{ place.candidates_url }}">{{ place.display_name.replace(';', '; ') }}</a>
+          {% if place.added %}
+            ({{ place.added.date() }})
+          {% endif %}
+        </td>
         <td>{{ place.state }}</td>
         <td>{{ place.changesets }}</td>
         <td>
