Date of most recent match on space page.

--- a/matcher/templates/db_space.html
+++ b/matcher/templates/db_space.html
@@ -26,8 +26,8 @@
         </td>
         <td>
           <a href="{{ place.candidates_url }}">{{ place.display_name.replace(';', '; ') }}</a>
-          {% if place.added %}
-            ({{ place.added.date() }})
+          {% if place.recent %}
+            ({{ place.recent.date() }})
           {% endif %}
         </td>
         <td>{{ place.state }}</td>
