--- a/matcher/templates/db_space.html
+++ b/matcher/templates/db_space.html
@@ -27,7 +27,7 @@
         <td>
           <a href="{{ place.candidates_url }}">{{ place.display_name.replace(';', '; ') }}</a>
           {% if place.recent %}
-            ({{ place.recent.date() }}, {{ place.username }})
+            ({{ place.recent.date() }})
           {% endif %}
         </td>
         <td>{{ place.state }}</td>
