Trying to allow matcher for Antarctica.

--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -3,8 +3,8 @@
 {% set detail = 0 %}
 {% for hit in results %}
   <div class="box">
-    {% if hit.osm_id and hit.osm_type != 'node' and hit.category in ('place', 'boundary', 'natural', 'leisure', 'amenity') and
-        (not hit.area or config.PLACE_MIN_AREA < hit.area < config.PLACE_MAX_AREA) and
+    {% if hit.osm_id and hit.osm_type != 'node' and hit.category in ('place', 'boundary', 'natural', 'leisure', 'amenity', 'landuse') and
+        (not hit.area or (hit.osm_id == 2186646 or config.PLACE_MIN_AREA < hit.area < config.PLACE_MAX_AREA)) and
         not hit.geotext.startswith('LINESTRING(') %}
       <b>
         {% if hit.place and hit.place.state == 'ready' %}
@@ -32,7 +32,7 @@
          </b>
        {% endif %}
        <br>
-        {% if hit.category not in ('place', 'boundary', 'natural', 'leisure', 'amenity') %}
+        {% if hit.category not in ('place', 'boundary', 'natural', 'leisure', 'amenity', 'landuse') %}
             [matcher only works with place or boundary]<br>
         {% elif hit.osm_type in ('way', 'relation') and hit.area %}
             {% if hit.area >= config.PLACE_MAX_AREA %}
