Adjust query error page heading.

--- a/matcher/templates/show_query_error.html
+++ b/matcher/templates/show_query_error.html
@@ -10,7 +10,7 @@
 <div class="row">
 <div class="col">
 
-<h1>Wikidata Query error</h1>
+<h1>Wikidata SPARQL query error</h1>
 <pre>
   {{ e.query }}
 </pre>
