Show endings in debugging output.

--- a/matcher/templates/single_item_match.html
+++ b/matcher/templates/single_item_match.html
@@ -16,6 +16,9 @@
     {% if item.categories %}
       <li>categories: {{ item.categories | join(', ') }}</li>
     {% endif %}
+    {% if endings %}
+      <li>endings: {{ endings | join(', ') }}</li>
+    {% endif %}
     {% if item.tags %}
       <li>tags: {{ item.tags | join(', ') }}</li>
     {% endif %}
