--- a/matcher/templates/reports/list.html
+++ b/matcher/templates/reports/list.html
@@ -7,9 +7,15 @@
     {% include "flash_msg.html" %}
     <h1>{{ self.title() }}</h1>
 
+    <p>Saved edits that no longer match.</p>
+
     <ul>
     {% for timestamp, num in q %}
-      <li><a href="{{ url_for(request.endpoint, timestamp=timestamp) }}">{{ timestamp }}</a> ({{ num }}</li>
+      {% set t=timestamp.strftime('%a, %d %b %Y %H:%M') %}
+      <li>
+        <a href="{{ url_for(request.endpoint, timestamp=timestamp) }}">{{ t }}</a>:
+        {{ num }} edits
+      </li>
     {% endfor %}
     </ul>
 
