--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -64,7 +64,7 @@
        {% for k, v in c.tags.items() if k != 'way_area' %}
         {% set tag = k + '=' + v %}
         {% if c.name_match and k in c.name_match %}
-          <b>{{ tag }}</b> ({{ c.name_match_count(k) }} Wikidata/Wikipedia name matches)
+          <b>{{ tag }}</b> ({{ c.name_match_count(k) }} name matches)
         {% elif k in search_tags or tag in search_tags %}
             <b>{{ tag }}</b> (OSM tag matches Wikidata or Wikipedia category)
         {% elif identifiers and k in identifiers and v in identifiers[k] %}
