--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -7,9 +7,8 @@
   </title>
   <link rel="shortcut icon" href="{{url_for('static', filename='img/favicon.png')}}" />
 
-  {% assets "style" %}
-  <link rel="stylesheet" href="{{ ASSET_URL }}">
-  {% endassets %}
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap4/css/bootstrap.css')}}">
 
   {% block style %}
   {% endblock %}
@@ -22,9 +21,9 @@
   {% block content %}{% endblock %}
   </div>
 
-  {% assets "js" %}
-  <script src="{{ ASSET_URL }}"></script>
-  {% endassets %}
+  <script src="{{ url_for('static', filename='jquery/jquery.js')}}"></script>
+  <script src="{{ url_for('static', filename='bootstrap4/js/bootstrap.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/app.js')}}"></script>
   {% block script %}{% endblock %}
 </body>
 </html>
