--- a/matcher/templates/browse.html
+++ b/matcher/templates/browse.html
@@ -54,6 +54,12 @@
   {{ place_box(place) }}
 {% endif %}
 
+{% if banner %}
+  <div>
+    <img src="{{ banner.thumbnail }}" class="img-fluid w-100" />
+  </div>
+{% endif %}
+
 {% if current_places %}
 
   <p class="mt-3">Sort by:
