--- a/matcher/templates/browse.html
+++ b/matcher/templates/browse.html
@@ -31,7 +31,7 @@
     {% for isa_qid in row.isa %}
       {% set isa = isa_map[isa_qid] %}
       <a href="https://wikidata.org/wiki/{{ isa_qid }}">
-        {{ isa.entity_label() }}
+        {{ isa.entity_label(lang=uselang) }}
       </a> ({{ isa_qid }})
       {% if not loop.last %}<br/>{% endif %}
     {% endfor %}
@@ -60,17 +60,39 @@
   </div>
 {% endif %}
 
+<div class="mt-2">
+<ul>
+  <li>View <a href="https://www.wikidata.org/wiki/{{ qid }}">
+      {{ name }} ({{ qid }}) on Wikidata</a></li>
+
+{% if languages %}
+  <li>Language:
+  {% for lang in languages %}
+    <a href="{{ set_url_args(lang=lang.code) }}">
+      {{- lang.local -}}
+      {%- if lang.local != lang.en %} ({{ lang.en }}){%- endif -%}
+      </a>
+      {%- if lang.code == uselang %} [current]{% endif -%}
+      {%- if loop.revindex == 2 %} or {% elif not loop.last %}, {% endif %}
+  {%- endfor -%}
+  </li>
+{% endif %}
+
 {% if current_places %}
 
-  <p class="mt-3">Sort by:
-  <a href="{{ url_for(request.endpoint,
-                      item_id=request.view_args.item_id,
-                      sort='area') }}">area</a> or
-  <a href="{{ url_for(request.endpoint,
-                      item_id=request.view_args.item_id,
-                      sort='population') }}">population</a>
-  </p>
+  <li>Sort by:
+    <a href="{{ set_url_args(sort='area') }}">area</a>
+    {% if request.args.sort == 'area' %}[current]{% endif %}
+    or
+    <a href="{{ set_url_args(sort='population') }}">population</a>
+    {% if request.args.sort == 'population' %}[current]{% endif %}
+  </li>
+{% endif %}
 
+</ul>
+</div>
+
+{% if current_places %}
   {{ place_table(current_places) }}
 {% else %}
   <p>No subregions were found.</p>
